# rag-system-foundation

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: main.py
app/core/: config.py
app/evaluation/: faithfulness.py  retrieval_eval.py  retrieval_metrics.py  test_cases.py
app/schema/: models.py
app/services/generation/: llm_client.py  prompt.py
app/services/ingestion/: chunker.py  embedder.py
app/services/rag/: pipeline.py
app/services/retrieval/: hybrid.py  lexical.py  reranker.py  vector_store.py
data/: faiss.index  faiss.index.texts.json
